--- a/Paint Panel/MainPage.xaml
+++ b/Paint Panel/MainPage.xaml
@@ -8,74 +8,119 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="Beige">
+    <Grid Background="#FFD7D4BF">
 
         <Grid >
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
-                <RowDefinition />
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="300"/>
+            </Grid.ColumnDefinitions>
 
-            <InkToolbar x:Name="inkToolbar" Grid.Row="0" Background="#FF2D2D30" RequestedTheme="Dark" TargetInkCanvas="{x:Bind inkCanvas}">
-                <InkToolbarCustomPenButton 
+            <Border Grid.Row="0" Grid.Column="0" Background="#FF2D2D30">
+                <InkToolbar x:Name="inkToolbar" Background="#FF2D2D30" RequestedTheme="Dark" TargetInkCanvas="{x:Bind inkCanvas}"
+                            HorizontalAlignment="Center">
+                    <InkToolbarCustomPenButton 
                     x:Name="customPen"
                     MinStrokeWidth="1" MaxStrokeWidth="20" SelectedStrokeWidth="3"
                     SelectedBrushIndex ="1">
-                    <Grid >
-                        <TextBlock Text="&#xEC87;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
-                    </Grid>
-                    <InkToolbarCustomPenButton.ConfigurationContent>
-                        <InkToolbarPenConfigurationControl />
-                    </InkToolbarCustomPenButton.ConfigurationContent>
-                </InkToolbarCustomPenButton>
-                <InkToolbarCustomToggleButton 
+                        <Grid >
+                            <TextBlock Text="&#xEC87;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
+                        </Grid>
+                        <InkToolbarCustomPenButton.ConfigurationContent>
+                            <InkToolbarPenConfigurationControl />
+                        </InkToolbarCustomPenButton.ConfigurationContent>
+                    </InkToolbarCustomPenButton>
+                    <InkToolbarCustomToggleButton 
                     x:Name="inputDevice" >
-                    <Grid>
-                        <TextBlock x:Name="inputDevice_icon" Text="&#xED5F;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
-                        <TextBlock x:Name="inputDevice_icon_mobile" Text="&#xEDC6;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
-                    </Grid>
-                </InkToolbarCustomToggleButton>
-                <InkToolbarCustomToolButton 
+                        <Grid>
+                            <TextBlock x:Name="inputDevice_icon" Text="&#xED5F;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
+                            <TextBlock x:Name="inputDevice_icon_mobile" Text="&#xEDC6;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
+                        </Grid>
+                    </InkToolbarCustomToggleButton>
+                    <InkToolbarCustomToolButton 
                     Click="open_Pens" >
-                    <TextBlock Text="&#xEDA8;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
-                </InkToolbarCustomToolButton>
-            </InkToolbar>
+                        <TextBlock Text="&#xEDA8;" FontSize="17" FontFamily="Segoe MDL2 Assets"/>
+                    </InkToolbarCustomToolButton>
+                </InkToolbar>
+            </Border>
 
-            <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
+            <!--<ScrollViewer Grid.Row="1" Grid.Column="0" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible">
                 <Viewbox Stretch="Uniform" StretchDirection="Both" >
                     <ScrollViewer ZoomMode="Enabled" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" >
                         <Grid x:Name="uiElement">
                             <Rectangle x:Name="panel_color" Fill="White" />
                             <Image x:Name="back_image" />
-                            <InkCanvas x:Name="inkCanvas" />
+                            <InkCanvas x:Name="inkCanvas" SizeChanged="inkCanvas_SizeChanged"/>
                         </Grid>
                     </ScrollViewer>
                 </Viewbox>
-            </ScrollViewer>
+            </ScrollViewer>-->
+            <Viewbox Grid.Row="1" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" >
+                <ScrollViewer ZoomMode="Enabled" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" >
+                    <Grid x:Name="uiElement">
+                        <Rectangle x:Name="panel_color" Fill="White" />
+                        <Image x:Name="back_image" />
+                        <InkCanvas x:Name="inkCanvas" SizeChanged="inkCanvas_SizeChanged"/>
+                    </Grid>
+                </ScrollViewer>
+            </Viewbox>
 
-            <Grid x:Name="sizePanel" Grid.Row="1" Padding="5" Background="#59000000" RequestedTheme="Dark" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Padding="5" BorderBrush="White" BorderThickness="0,0,0,0.5">
+            <Border Grid.Row="0" Grid.Column="1" Background="#FF2D2D30">
+
+            </Border>
+
+            <Border Grid.Row="1" Grid.Column="1" Background="Beige" RequestedTheme="Light">
+                <Grid >
                     <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
+                        <RowDefinition Height="100"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="120"/>
-                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Height" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox x:Name="size_hight" Width="100" Grid.Row="0" Grid.Column="1" InputScope="Number" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBlock Text="Width" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox x:Name="size_width" Width="100" Grid.Row="1" Grid.Column="1" InputScope="Number" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <Button Grid.Column="2" Grid.RowSpan="2" Content="Reset Resolution" Click="new_size" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+                    <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Padding="5" >
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="120"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Height" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                        <TextBox x:Name="size_hight" Width="100" Grid.Row="0" Grid.Column="1" InputScope="Number" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <TextBlock Text="Width" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                        <TextBox x:Name="size_width" Width="100" Grid.Row="1" Grid.Column="1" InputScope="Number" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Button Grid.Column="2" Grid.RowSpan="2" Content="Reset" Click="new_size" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+                    </Grid>
+                    <ScrollViewer Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                        <ListView x:Name="color_list" ItemsSource="{Binding myColors}" IsItemClickEnabled="True" ItemClick="color_list_ItemClick" SelectionMode="Single">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Height="48">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="24"/>
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+                                        <Rectangle Grid.Column="0" Fill="{Binding IndexColorBrush}" Height="20" Width="20"/>
+                                        <TextBlock Grid.Column="1" Text="{Binding ColorName}" Margin="24,0,0,0" Style="{ThemeResource BodyTextBlockStyle}" VerticalAlignment="Center"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </ScrollViewer>
                 </Grid>
-                <Grid Grid.Row="1" Padding="5" BorderBrush="White" BorderThickness="0,0.5,0,0">
+            </Border>
+
+            <Grid x:Name="sizePanel" Grid.Row="1" Padding="5" Background="#59000000" RequestedTheme="Dark" >
+                <Grid Padding="5" >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="24"/>
                         <RowDefinition />
@@ -112,7 +157,6 @@
                     <Button Grid.Row="2" Grid.Column="1" Content="Choose" Click="collection_choose" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
                     <Button Grid.Row="2" Grid.Column="2" Content="Delete" Click="collection_delete" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
                 </Grid>
-
             </Grid>
 
         </Grid>
@@ -133,29 +177,6 @@
             </SplitView.Pane>
         </SplitView>
 
-        <SplitView x:Name="panel_colors" Margin="0,48,0,0" OpenPaneLength="200" CompactPaneLength="0" PaneBackground="#59000000" DisplayMode="CompactOverlay">
-            <SplitView.Pane>
-                <ScrollViewer Grid.Row="0" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                    <Grid >
-                        <ListView x:Name="color_list" ItemsSource="{Binding myColors}" IsItemClickEnabled="True" ItemClick="color_list_ItemClick" SelectionMode="Single">
-                            <ListView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid Height="48">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="24"/>
-                                            <ColumnDefinition />
-                                        </Grid.ColumnDefinitions>
-                                        <Rectangle Grid.Column="0" Fill="{Binding IndexColorBrush}" Height="20" Width="20"/>
-                                        <TextBlock Grid.Column="1" Text="{Binding ColorName}" Margin="24,0,0,0" Style="{ThemeResource BodyTextBlockStyle}" VerticalAlignment="Center"/>
-                                    </Grid>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </Grid>
-                </ScrollViewer>
-            </SplitView.Pane>
-        </SplitView>
-
     </Grid>
 
     <Page.BottomAppBar>
@@ -165,9 +186,6 @@
             </AppBarToggleButton>
             <AppBarButton Label="Undo" Click="ink_undo">
                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE845;" />
-            </AppBarButton>
-            <AppBarButton Label="Color" Click="choose_color">
-                <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE2B1;"/>
             </AppBarButton>
             <AppBarButton Label="Open" Tapped="flyoutBase_Tapped" >
                 <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE197;" />
@@ -204,4 +222,3 @@
     </Page.BottomAppBar>
 
 </Page>
-
